test/files/pos/t11917/Z.scala
// scalac: -Ypickle-java
package bar

class Z
