test/files/neg/case-collision-multifile/one.scala
// scalac: -Xfatal-warnings
class HotDog
